--- a/style.css
+++ b/style.css
@@ -1,40 +1,100 @@
 body {
-  margin: 0 auto;
-  padding: 0;
-  font-family: "poppins", sans-serif;
+  margin: 0;
+  font-family: "Poppins", sans-serif;
 }
-.header-bg {
-  background-image: url("images/header.png");
-  background-repeat: no-repeat;
-}
-.half-width {
-  width: 45%;
-  float: left;
-}
-.pink-clr {
-  color: #bb243e;
-  font-weight: 900;
-}
-
-.text h1 {
-  text-align: justify;
-  margin-top: 150px;
+h1 {
   font-size: 50px;
 }
-.text p {
-  text-align: justify;
+h2 {
+  font-size: 40px;
 }
-.text {
+p {
+  color: dimgray;
+}
+.text-highlight {
+  color: #ec4f91;
+  letter-spacing: 1px;
+}
+.half-width {
+  width: 40%;
+  float: left;
+  margin-left: 5%;
+  padding-left: 2%;
+}
+.half-width img {
+  width: 100%;
+}
+.header-bg {
+  background-image: url("images/header-bg.png");
+  background-repeat: no-repeat;
+  background-position: center;
+  height: 600px;
+}
+
+.header-area-text {
+  margin-top: 170px;
   margin-left: 20%;
 }
-.pink-btn {
-  background-color: #bb243e;
-  padding: 15px 25px;
-  color: #ffffff;
-  text-transform: uppercase;
-  border-radius: 8px;
-  width: 150px;
+section {
+  height: 500px;
+  padding-bottom: 150px;
 }
-.dream-bg {
+.link-button {
+  text-decoration: none;
+  background-color: #ec4f91;
+  padding: 15px 30px;
+  border-radius: 5px;
+  color: white;
+  font-weight: 700;
+  letter-spacing: 1px;
+}
+.dream-area {
   background-image: url("images/biography.png");
+  background-repeat: no-repeat;
+  background-position: right;
+  height: 600px;
+  padding-top: 40px;
+}
+
+.latest-work-area {
+  background-image: url("images/latest-work-bg.png");
+  background-repeat: no-repeat;
+  background-position: center;
+  width: 100%;
+}
+.latest-work-area h2 {
+  text-align: center;
+}
+.column-3 {
+  width: 30%;
+  float: left;
+  margin-left: 2%;
+}
+.column-3 img {
+  width: 100%;
+}
+.footer-bg {
+  background-image: url("images/footer-bg.png");
+  background-repeat: no-repeat;
+  background-position: center;
+  width: 100%;
+  height: 300px;
+}
+.footer-area-text {
+  text-align: center;
+}
+.highlighted-footer-area {
+  background-color: #ec4f91;
+  background-image: linear-gradient(45deg, #8b2952, #ec4f91);
+  width: 30%;
+  margin: 10px auto;
+  padding: 10px 20px;
+  border-radius: 5px;
+}
+.highlighted-footer-area p {
+  color: #fff;
+}
+footer p {
+  text-align: center;
+  font-size: 12px;
 }
